--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
         "branch-alias": {
             "dev-master": "0.5-dev"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8"
     }
 }
